fixed button alignment on properties page

--- a/alexandria-react/src/index.css
+++ b/alexandria-react/src/index.css
@@ -54,7 +54,7 @@ hr {
 
 /*temporty fix bc this button will render dynamicall*/
 .propertyDetails {
-  margin-bottom: 5%;
+  margin-top: 1%;
 }
 
 .deleteProp,
